2005-08-22 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/mcs51/asdata.c: changed ctype['['] to BINOP
	* as/mcs51/asexpr.c (expr): added case '[' for bit access in bdata,
	  (term): abused bit 15 of s_addr to indicate bit-addressable bytes,
	  (oprio): set priority for '['
	* as/mcs51/aslink.h: added define R_BIT, and prototypes for adb_bit
	   and adb_24_bit
	* as/mcs51/asm.h: added defines R_BIT and S_BIT
	* as/mcs51/lkarea.c (lnksect2): use T for seg BIT_BANK and overlay it
	* as/mcs51/lkdata.c: changed ctype['['] to BINOP
	* as/mcs51/lkmain.c (Areas51): rel2 contains 12 (=C) areas now,
	  added overlayable BIT_BANK area
	* as/mcs51/lkmem.c (summary): add BIT_BANK to BSEG_BYTES in the report,
	  (summary2): explain 'T' in legenda
	* as/mcs51/lkrloc.c: replaced old K&R style,
	  (relr): added R_BIT processing,
	  (errmsg): added "Bit-addressable relocation error",
	  (adb_bit): added for converting from byte- to bit-addressable space,
	  (adb_24_bit): added for converting from byte- to bit-addressable space
	* device/include/stdbool.h: changed BOOL to __bit for mcs51 as it can be
	   used in reentrant functions now even as return value
	* device/lib/_gptrput.c (_gptrput): removed obsolete code
	* src/SDCCast.c (resultTypePropagate): also propagate AND_OP and OR_OP,
	  (decorateType): case '!', GETHBIT, AND_OP, OR_OP: result in bool or char
	* src/SDCCglobl.h: added indicator BitBankUsed
	* src/SDCCglue.c (glue): emit area BIT_BANK with byte 'bits' and equ's for
	   the bit registers b0-b7
	* src/SDCCicode.c (operandFromSymbol): removed IS_BITVAR check,
	  (geniCodeCast): fixed bug 1263853,
	  (geniCodeLogicAndOr): put result in bool or char,
	  (geniCodeReceive): added parameter func for accessing the return type,
	  (geniCodeFunctionBody): pass func to geniCodeReceive
	* src/SDCCmain.c: added indicator BitBankUsed
	* src/SDCCmem.c (allocLocal): explicitly set sclass for V_BIT
	* src/SDCCsymt.c (newBoolLink): added for creating a bool/bit,