@@ -730,30 +730,30 @@ extern  VOID            newpag();
 extern  VOID            slew();
 
 /* lkrloc.c */
-extern  Addr_T          adb_b();
-extern  Addr_T          adb_bit();
-extern  Addr_T          adb_hi();
-extern  Addr_T          adb_lo();
-extern  Addr_T          adb_24_bit(Addr_T v, int i);
+extern  Addr_T          adb_b(register Addr_T v, register int i);
+extern  Addr_T          adb_bit(register Addr_T v, register int i);
+extern  Addr_T          adb_hi(Addr_T  v, int i);
+extern  Addr_T          adb_lo(Addr_T  v, int i);
+extern  Addr_T          adb_24_bit(register Addr_T v, register int i);
 extern  Addr_T          adb_24_hi(Addr_T v, int i);
 extern  Addr_T          adb_24_mid(Addr_T v, int i);
 extern  Addr_T          adb_24_lo(Addr_T v, int i);
-extern  Addr_T          adw_w();
-extern  Addr_T          adw_24(Addr_T, int);
-extern  Addr_T          adw_hi();
-extern  Addr_T          adw_lo();
-extern  Addr_T          evword();
-extern  VOID            rele();
-extern  VOID            reloc();
-extern  VOID            relt();
-extern  VOID            relr();
-extern  VOID            relp();
-extern  VOID            relerr();
+extern  Addr_T          adw_w(register Addr_T v, register int i);
+extern  Addr_T          adw_24(Addr_T v, int i);
+extern  Addr_T          adw_hi(Addr_T  v, int i);
+extern  Addr_T          adw_lo(Addr_T  v, int i);
+extern  Addr_T          evword(VOID);
+extern  VOID            rele(VOID);
+extern  VOID            reloc(char c);
+extern  VOID            relt(VOID);
+extern  VOID            relr(VOID);
+extern  VOID            relp(VOID);
+extern  VOID            relerr(char *str);
 extern  char *          errmsg[];
-extern  VOID            errdmp();
-extern  VOID            relerp();
-extern  VOID            erpdmp();
-extern  VOID            prntval();
+extern  VOID            errdmp(FILE *fptr, char *str);
+extern  VOID            relerp(char *str);
+extern  VOID            erpdmp(FILE *fptr, char *str);
+extern  VOID            prntval(FILE *fptr, Addr_T v);
 extern  int             lastExtendedAddress;
 
 /* lklibr.c */
